--- a/Lets-Share/Views/Home/Items.cshtml
+++ b/Lets-Share/Views/Home/Items.cshtml
@@ -1,10 +1,10 @@
-﻿@model AddItem
+﻿@model Lets_Share.ViewModels.ItemsViewModel
 
 
 <div class="container">
     <div class="mt-5">
-        <div class="row">
-            <div class="col-md-4">
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
                 <div class="card bg-light mt-4" style="width: 18rem;">
                     <div class="card-body">
                         <div class="col text-center">
@@ -29,24 +29,24 @@
                                             <div asp-validation-summary="All"></div>
 
                                             <div class="form-group">
-                                                <label asp-for="Name">Nome</label>
-                                                <input class="form-control" placeholder="Nome do item" asp-for="Name" />
-                                                <span asp-validation-for="Name"></span>
+                                                <label asp-for="Item.Name">Nome</label>
+                                                <input class="form-control" placeholder="Nome do item" asp-for="Item.Name" />
+                                                <span asp-validation-for="Item.Name"></span>
                                             </div>
 
                                             <div class="form-group">
-                                                <label asp-for="Description">Descrição</label>
-                                                <input class="form-control" placeholder="Descrição do item" asp-for="Description" />
-                                                <span asp-validation-for="Description"></span>
+                                                <label asp-for="Item.Description">Descrição</label>
+                                                <input class="form-control" placeholder="Descrição do item" asp-for="Item.Description" />
+                                                <span asp-validation-for="Item.Description"></span>
                                             </div>
                                             <div class="form-group">
-                                                <label asp-for="Available">Este item está disponível?</label>
-                                                <select class="form-control" asp-for="Available">
+                                                <label asp-for="Item.Available">Este item está disponível?</label>
+                                                <select class="form-control" asp-for="Item.Available">
                                                     <option value="">Escolha a opção</option>
                                                     <option value="true">Sim</option>
                                                     <option value="false">Não</option>
                                                 </select>
-                                                <span asp-validation-for="Available"></span>
+                                                <span asp-validation-for="Item.Available"></span>
                                             </div>
                                         </div>
                                         <div class="modal-footer">
@@ -66,3 +66,19 @@
 </div>
 
 
+<div class="container">
+    <div class="mt-5">
+        <div class="row">
+            @foreach (var itm in Model.Items)
+            {
+            <div class="col-md-4">
+                <div class="card mt-4 bg-light">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">@itm.Name</h5>
+                    </div>
+                </div>
+            </div>
+            }
+        </div>
+    </div>
+</div>
