Altera função editar.

--- a/Lets-Share/Views/Home/Index.cshtml
+++ b/Lets-Share/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <div><a asp-action="Items">Itens!</a></div>
+    <div><a  asp-controller="Item" asp-action="Index">Itens!</a></div>
 </div>
