--- a/Lets-Share/Views/Item/Index.cshtml
+++ b/Lets-Share/Views/Item/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Lets_Share.ViewModels.ItemsViewModel
 
+@{ ViewBag.Title = "Items"; }
+
 
 <div class="container">
     <div class="mt-5">
@@ -22,7 +24,7 @@
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
 
                                     </div>
-                                    <form method="post" asp-controller="Home" asp-action="Items">
+                                    <form method="post" asp-controller="Item" asp-action="Index">
                                         <div class="modal-body">
 
 
@@ -66,68 +68,40 @@
 </div>
 
 
+
 <div class="container">
     <div class="mt-5">
         <div class="row">
             @foreach (var itm in Model.Items)
             {
-            <div class="col-md-4">
-                <div class="card mt-4 bg-light">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">@itm.Name</h5>
-                        <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#editItems" onclick="preencherDados(@itm.Id)">Editar</button>
-                        <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteItems">Remover</button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="editItems" role="dialog" data-keyboard="false" data-backdrop="static">
-                            <div class="modal-dialog">
-
-                                <!-- Modal content-->
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Cadastro de Item</h4>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-
-                                    </div>
-                                    <form method="post" asp-controller="Home" asp-action="Items" asp-route-Id="@itm.Id">
-                                        <div class="modal-body">
-
-
-                                            <div asp-validation-summary="All"></div>
-
-                                            <div class="form-group">
-                                                <label asp-for="Item.Name">Nome</label>
-                                                <input class="form-control" placeholder="Nome do item" asp-for="Item.Name" />
-                                                <span asp-validation-for="Item.Name"></span>
-                                            </div>
-
-                                            <div class="form-group">
-                                                <label asp-for="Item.Description">Descrição</label>
-                                                <input class="form-control" placeholder="Descrição do item" asp-for="Item.Description" />
-                                                <span asp-validation-for="Item.Description"></span>
-                                            </div>
-                                            <div class="form-group">
-                                                <label asp-for="Item.Available">Este item está disponível?</label>
-                                                <select class="form-control" asp-for="Item.Available">
-                                                    <option value="">Escolha a opção</option>
-                                                    <option value="true">Sim</option>
-                                                    <option value="false">Não</option>
-                                                </select>
-                                                <span asp-validation-for="Item.Available"></span>
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="submit" class="btn btn-primary">Salvar</button>
-                                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-                                        </div>
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div class="col-md-4">
+    <div class="card mt-4 bg-light">
+        <div class="card-body">
+            <div class="col text-center">
+                <h5 class="card-title">@itm.Name</h5>
+                <button type="button" class="btn btn-outline-info edit" data-id=@itm.Id>Editar</button>
+                <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteItems">Remover</button>
             </div>
-            }
+        </div>
+    </div>
+</div>      }
         </div>
     </div>
 </div>
+
+<div id="modal" class="modal fade"  role="dialog"/>
+
+@section scripts{
+    <script>
+        $(function () {
+            $(".edit").click(function () {
+                var id = $(this).attr("data-id");
+                console.log("id");
+                $("#modal").load("Item/Edit/" + id, function () {
+                    console.log("chamou modal")
+                    $("#modal").modal();
+                })
+            });
+        })
+    </script>
+}
