--- a/Lets-Share/Views/Item/Delete.cshtml
+++ b/Lets-Share/Views/Item/Delete.cshtml
@@ -1,7 +1,7 @@
-﻿@model Lets_Share.ViewModels.ItemsViewModel
-
-@{ ViewBag.Title = "teste"; }
-
+﻿@model Lets_Share.Models.AddItem
+@{
+    ViewBag.Title = "Delete";
+}
 <!-- Modal -->
 <div class="container">
     <div class="modal-dialog">
@@ -13,35 +13,35 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
 
             </div>
-            <form method="post" asp-controller="Item" asp-action="Edit">
+            <form method="post" asp-controller="Item" asp-action="Delete">
                 <div class="modal-body">
 
 
                     <div asp-validation-summary="All"></div>
 
                     <div class="form-group">
-                        <label asp-for="Item.Name">Nome</label>
-                        <input class="form-control" placeholder="Nome do item" asp-for="Item.Name" />
-                        <span asp-validation-for="Item.Name"></span>
+                        <label asp-for="Name">Nome</label>
+                        <input class="form-control" placeholder="Nome do item" asp-for="Name" />
+                        <span asp-validation-for="Name"></span>
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="Item.Description">Descrição</label>
-                        <input class="form-control" placeholder="Descrição do item" asp-for="Item.Description" />
-                        <span asp-validation-for="Item.Description"></span>
+                        <label asp-for="Description">Descrição</label>
+                        <input class="form-control" placeholder="Descrição do item" asp-for="Description" />
+                        <span asp-validation-for="Description"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Item.Available">Este item está disponível?</label>
-                        <select class="form-control" asp-for="Item.Available">
+                        <label asp-for="Available">Este item está disponível?</label>
+                        <select class="form-control" asp-for="Available">
                             <option value="">Escolha a opção</option>
                             <option value="true">Sim</option>
                             <option value="false">Não</option>
                         </select>
-                        <span asp-validation-for="Item.Available"></span>
+                        <span asp-validation-for="Available"></span>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Salvar</button>
+                    <button type="submit" class="btn btn-primary">Remover</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
                 </div>
             </form>
@@ -49,3 +49,4 @@
 
     </div>
 </div>
+
