--- a/Lets-Share/Views/Item/Edit.cshtml
+++ b/Lets-Share/Views/Item/Edit.cshtml
@@ -1,10 +1,52 @@
-﻿@model Lets_Share.ViewModels.ItemsViewModel
+﻿@model Lets_Share.Models.AddItem
 @{
     ViewBag.Title = "Edit";
 }
-<div class="modal-dialog">
-    <div class="modal-content">
-        <h1>teste</h1>
-    </div><!-- /.modal-content -->
-</div><!-- /.modal-dialog -->
+<!-- Modal -->
+<div class="container">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Cadastro de Item</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+            </div>
+            <form method="post" asp-controller="Item" asp-action="Edit">
+                <div class="modal-body">
+
+
+                    <div asp-validation-summary="All"></div>
+
+                    <div class="form-group">
+                        <label asp-for="Name">Nome</label>
+                        <input class="form-control" placeholder="Nome do item" asp-for="Name" />
+                        <span asp-validation-for="Name"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Description">Descrição</label>
+                        <input class="form-control" placeholder="Descrição do item" asp-for="Description" />
+                        <span asp-validation-for="Description"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Available">Este item está disponível?</label>
+                        <select class="form-control" asp-for="Available">
+                            <option value="">Escolha a opção</option>
+                            <option value="true">Sim</option>
+                            <option value="false">Não</option>
+                        </select>
+                        <span asp-validation-for="Available"></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Salvar</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
 
