--- a/Lets-Share/Views/Home/Index.cshtml
+++ b/Lets-Share/Views/Home/Index.cshtml
@@ -1,9 +1,32 @@
-﻿@{
+﻿@model Lets_Share.ViewModels.ItemsViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Bem-Vindo ao bazar Let's Share!</h1>
+    <p>Para alugar um item basta escolher o item. Para cadastrar um item é necessário cadastrar seu usuário e depois um item.</p>
     <div><a asp-controller="Item" asp-action="Index">Itens!</a></div>
     <div><a asp-controller="User" asp-action="Index">Usuários!</a></div>
+</div>
+
+<div class="container">
+    <div class="mt-5">
+        <div class="row">
+            @foreach (var itm in Model.Items)
+            {
+                <div class="col-md-4">
+                    <div class="card mt-4 bg-light">
+                        <div class="card-body">
+                            <div class="col text-center">
+                                <h5 class="card-title">@itm.Name</h5>
+                                <button type="button" class="btn btn-outline-info edit" data-id=@itm.Id>Alugar</button>
+                                <button type="button" class="btn btn-outline-danger delete" data-id=@itm.Id>Cancelar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>      }
+        </div>
+    </div>
 </div>
