--- a/Lets-Share/Views/Item/Index.cshtml
+++ b/Lets-Share/Views/Item/Index.cshtml
@@ -42,13 +42,22 @@
                                                 <span asp-validation-for="Item.Description"></span>
                                             </div>
                                             <div class="form-group">
-                                                <label asp-for="Item.Available">Este item está disponível?</label>
-                                                <select class="form-control" asp-for="Item.Available">
+                                                <label asp-for="Item.AvailableRent">Este item está disponível para alugar?</label>
+                                                <select class="form-control" asp-for="Item.AvailableRent">
                                                     <option value="">Escolha a opção</option>
                                                     <option value="true">Sim</option>
                                                     <option value="false">Não</option>
                                                 </select>
-                                                <span asp-validation-for="Item.Available"></span>
+                                                <span asp-validation-for="Item.AvailableRent"></span>
+                                            </div>
+                                            <div class="form-group">
+                                                <label asp-for="Item.AvailableBorrow">Este item pode ser emprestado?</label>
+                                                <select class="form-control" asp-for="Item.AvailableBorrow">
+                                                    <option value="">Escolha a opção</option>
+                                                    <option value="true">Sim</option>
+                                                    <option value="false">Não</option>
+                                                </select>
+                                                <span asp-validation-for="Item.AvailableBorrow"></span>
                                             </div>
                                         </div>
                                         <div class="modal-footer">
