Adiciona página com itens alugados. Adiciona filtro para itens alugados, todos os itens e usuários cadastrados.

--- a/Lets-Share/Views/Home/Index.cshtml
+++ b/Lets-Share/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <p>Para alugar um item basta escolher o item. Para cadastrar um item é necessário cadastrar seu usuário e depois um item.</p>
     <div><a asp-controller="Item" asp-action="Index">Itens!</a></div>
     <div><a asp-controller="User" asp-action="Index">Usuários!</a></div>
+    <div><a asp-controller="Item" asp-action="Rent">Confira os itens alugados!</a></div>
 </div>
 
 <div class="container">
