--- a/Lets-Share/Views/User/Index.cshtml
+++ b/Lets-Share/Views/User/Index.cshtml
@@ -2,6 +2,10 @@
 
 @{ ViewBag.Title = "Users"; }
 
+<form method="post" asp-controller="User" asp-action="search" class="form-inline my-2 my-lg-0 justify-content-end">
+    <input asp-for="Search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+</form>
 
 <div class="container">
     <div class="mt-5">
