--- a/Lets-Share/Views/Shared/_Layout.cshtml
+++ b/Lets-Share/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Lets_Share</title>
+    <title>Lets Share!</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,7 +11,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-secondary border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Lets_Share</a>
+               
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="\img\bazar.png" width="40" height="40" />Lets Share</a>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,7 +21,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-controller="Item" asp-action="Index">Itens</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="User" asp-action="Index">Usuários</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -38,7 +43,7 @@
     <footer class="border-top footer">
         <div class="row text-center">
             <div class="col-lg-12">
-                <p>Copyright &copy; 2021 - Let's Code, Projeto do Módulo de ASP.NET Core MVC</p>
+                <p>Copyright &copy; 2021 - Let's Code | Cibele, Débora e Elenilson | Projeto do Módulo de ASP.NET Core MVC</p>
             </div>
         </div>
     </footer>
